Revision history for Yaadgom

{{$NEXT}}

0.03  2015-09-01 08:01:58 BRT
        - Typos on documentation

0.02  2015-08-31 20:03:21 BRT
        - Add on_destroy callback
        - Documment all methods
        - Add an example using with Stash::REST

0.01  2015-08-31 18:53:46 BRT

        - Initial release