@@ -1,6 +1,7 @@
 Revision history for Yaadgom
 
 {{$NEXT}}
+    - added slash_filename_replacement option
 
 0.03  2015-09-01 08:01:58 BRT
         - Typos on documentation
